--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "pack pic",
     "type": "library",
     "require": {
-        "php": "^5.6"
+        "php": ">=5.6"
     },
     "license": "MIT",
     "authors": [
